feat:update profile

--- a/_posts/2017-10-14-Git笔记.md
+++ b/_posts/2017-10-14-Git笔记.md
@@ -18,40 +18,456 @@ tags:
 
 # 前言
 主要是整理一些自己工作上和网上看到的关于Git好的资料。
+# Git 版本控制的工作流程
 
-# 目录
-Git 版本控制的工作流程
+![](http://oxy6ml8al.bkt.clouddn.com/git-work-flow.jpg)
 
-Git 安装，在 Linux 上安装
+# Git 安装(Linux)
+```
+$ yum install git
+或者：
+$ apt-get install git
+```
+# Git 获取帮助
+```
+$ git help <verb>
+$ git <verb> --help
+$ man git-<verb>
 
-Git 获取帮助
+//获得 config 命令的手册
+$ git help config
 
-Git 创建版本库
+```
+# Git 创建版本库
+```
+//新建一个文件夹
+$ mkdir [dictionary]
+//把这个目录变成Git可以管理的仓库
+$ git init
 
-Git 配置
+//也可以直接
+$ git init [dictionary]
 
-如何忽略Git版本控制
+//克隆现有的仓库
+$ git clone [url]
+```
+# Git 配置
+Git 自带一个 git config 的工具来帮助设置控制 Git 外观和行为的配置变量。
 
-Git 本地仓库基本操作
+这些变量存储在三个不同的位置：
+1. /etc/gitconfig 文件: 包含系统上每一个用户及他们仓库的通用配置。
+如果使用带有 --system 选项的 git config 时，它会从此文件读写配置变量。
+1. ~/.gitconfig 或 ~/.config/git/config 文件：只针对当前用户。
+可以传递 --global 选项让 Git 读写此文件。
+1. 当前使用仓库的 Git 目录中的 config 文件（就是 .git/config）：针对该仓库。
 
-Git 本地仓库与远程仓库交互
+每一个级别覆盖上一级别的配置，所以 .git/config 的配置变量会覆盖 /etc/gitconfig 中的配置变量。
+```
+// 检查配置信息
+$ git config --list
 
-Git 查看信息基本操作
+// 编辑配置文件
+$ git config -e [--global]
 
-Git 分支管理(branch)
+// 设置提交代码时的用户信息，如果使用了 --global 选项，那么该命令只需要运行一次，因为之后无论你在该系统上做任何事情， Git 都会使用那些信息。
+$ git config [--global] user.name "[name]"
+$ git config [--global] user.email "[email]"
 
-Git 标签管理(tag)
+//配置别名
+$ git config --global alias.st status
+$ git config --global alias.co checkout
+$ git config --global alias.ci commit
+$ git config --global alias.br branch
+$ git config --global alias.unstage 'reset HEAD' //把暂存区的修改撤销掉
+$ git config --global alias.last 'log -1' //显示最后一次提交信息
+```
+当前用户的Git配置文件放在用户主目录下的一个隐藏文件.gitconfig中
+```
+$ cat .gitconfig
+[alias]
+    co = checkout
+    ci = commit
+    br = branch
+    st = status
+[user]
+    name = Your Name
+    email = your@email.com
+```
+# 如何忽略Git版本控制
+添加 .gitignore 文件
+```
+my.log
+/.idea/
+/target/
+/project.iml
+/logs/
+```
+# Git 本地仓库基本操作
+```
+// 添加指定文件到暂存区
+$ git add [file1] [file2] ...
 
-撤销
+// 添加指定目录到暂存区，包括子目录
+$ git add [dir]
 
-Stash
+// 添加当前目录的所有文件到暂存区
+$ git add .
 
-变基 rebase
+// 删除工作区文件，并且将这次删除放入暂存区
+$ git rm [file1] [file2] 
 
-Hooks
+// 停止追踪指定文件，但该文件会保留在工作区
+$ git rm --cached [file]
 
-如何修改 commit message
+// 更改文件名，并且将这个改名放入暂存区
+$ git mv [file-before] [file-after]
 
-Fork
+// 提交暂存区到仓库区
+$ git commit -m [message]
 
-Submodule
+// 提交暂存区的指定文件到仓库区
+$ git commit [file1] [file2] ... -m [message]
+
+// 提交工作区自上次commit之后的变化，直接到仓库区
+$ git commit -a
+
+// 提交时显示所有diff信息
+$ git commit -v
+
+// 撤消操作
+// 使用一次新的commit，替代上一次提交
+// 如果代码没有任何新变化，则用来改写上一次commit的提交信息
+$ git commit --amend -m [message]
+
+// 重做上一次commit，并包括指定文件的新变化
+$ git commit --amend [file1] [file2] 
+```
+# Git 本地仓库与远程仓库交互
+```
+// 添加一个远程仓库 git remote add zhangsan http://host:port/project.git
+// alias 默认是 origin
+$ git remote add [alias] [url]
+
+// 显示所有远程仓库
+$ git remote -v
+
+// 显示某个远程仓库的信息
+$ git remote show [alias]
+
+// 下载远程仓库的所有变动
+$ git fetch [alias]
+
+// 合并远程分支到当前分支
+$ git merge [alias] [branch]
+
+// 取回远程仓库的变化，并与本地分支合并，相当于 fetch+merge
+$ git pull [alias] [branch]
+
+// 上传本地指定分支到远程仓库
+$ git push [alias] [branch]
+
+// 强行推送当前分支到远程仓库，无视冲突
+$ git push [alias] --force
+
+// 推送所有分支到远程仓库
+$ git push [alias] --all
+```
+# Git 查看信息基本操作
+```
+// 显示所有变更的文件
+$ git status
+
+// 显示当前分支的版本历史
+$ git log
+
+// 显示commit历史，以及每次commit发生变更的文件
+$ git log --stat
+
+// 搜索提交历史，根据关键词
+$ git log -S [keyword]
+
+// 显示某个commit之后的所有变动，每个commit占据一行
+$ git log [tag] HEAD --pretty=format:%s
+
+// 显示某个commit之后的所有变动，其"提交说明"必须符合搜索条件
+$ git log [tag] HEAD --grep feature
+
+// 显示某个文件的版本历史，包括文件改名
+$ git log --follow [file]
+$ git whatchanged [file]
+
+// 显示指定文件相关的每一次diff
+$ git log -p [file]
+
+// 显示过去5次提交
+$ git log -5 --pretty --oneline
+
+// 显示所有提交过的用户，按提交次数排序
+$ git shortlog -sn
+
+// 显示指定文件是什么人在什么时间修改过
+$ git blame [file]
+
+// 显示暂存区和工作区的差异
+$ git diff
+
+// 显示暂存区和上一个commit的差异
+$ git diff --cached [file]
+
+// 显示工作区与当前分支最新commit之间的差异
+$ git diff HEAD
+
+// 显示两次提交之间的差异
+$ git diff [first-branch]...[second-branch]
+
+// 显示今天你写了多少行代码
+$ git diff --shortstat "@{0 day ago}"
+
+// 显示某次提交的元数据和内容变化
+$ git show [commit]
+
+// 显示某次提交发生变化的文件
+$ git show --name-only [commit]
+
+// 显示某次提交时，某个文件的内容
+$ git show [commit]:[filename]
+
+// 显示当前分支的最近几次提交
+$ git reflog
+```
+# Git 分支管理(branch)
+几乎所有的版本控制系统都以某种形式支持分支。使用分支意味着你可以把你的工作从开发主线上分离开来，以免影响开发主线。Git 强大的分支管理，使SVN就相形见绌了。
+
+![](http://oxy6ml8al.bkt.clouddn.com/git-branch.jpg)
+
+基本命令
+```
+// 查看本地分支
+$ git branch
+
+// 查看远程分支
+$ git branch -r
+
+// 查看本地和远程分支
+$ git branch -a
+
+// 创建分支，但依然停留在当前分支
+$ git branch [branch-name]
+
+// 切换分支
+$ git checkout [branch-name]
+
+// 创建+切换分支
+$ git checkout -b [branch]
+
+// 新建一个分支，指向指定的commit点
+$ git branch [branch] [commit]
+
+// 新建一个分支，与指定的远程分支建立追踪关系
+$ git branch --track [branch] [remote-branch]
+
+// 建立追踪关系，在现有分支与指定的远程分支之间
+$ git branch --set-upstream [branch] [remote-branch]
+
+// 合并某分支到当前分支
+$ git merge [branch]
+
+// 选择一个commit点，合并进当前分支
+$ git cherry-pick [commit]
+
+// 切换到上一个分支
+$ git checkout -
+
+// 删除分支
+$ git branch -d [branch-name]
+
+// 删除远程分支
+$ git push origin --delete [branch-name]
+$ git branch -dr [remote/branch]
+```
+# Git 标签管理(tag)
+发布一个版本时，我们通常先在版本库中打一个标签（tag），这样，就唯一确定了打标签时刻的版本。将来无论什么时候，取某个标签的版本，就是把那个打标签的时刻的历史版本取出来。所以，标签也是版本库的一个快照
+```
+// 查看所有标签，注意，标签不是按时间顺序列出，而是按字母排序的
+$ git tag
+
+// 新建一个标签
+$ git tag [tagName]
+
+// 指定一个commit id
+$ git tag [tagName] [commit]
+
+// 指定标签信息
+$ git tag -a [tagName] -m "[message]"
+
+//用PGP签名标签，必须首先安装gpg（GnuPG），如果没有找到gpg，或者没有gpg密钥对，就会报错
+$ git tag -s [tagName] -m "[message]"
+
+
+// 删除本地标签
+$ git tag -d [tagName]
+
+// 删除远程标签
+$ git push origin :refs/tags/[tagName]
+
+// 查看标签信息
+$ git show [tag]
+
+// 提交指定标签
+$ git push [remote] [tagName]
+
+// 提交所有标签
+$ git push [remote] --tags
+
+// 新建一个分支，指向某个标签点
+$ git checkout -b [branch] [tagName]
+```
+# 撤销
+1. 当你改乱了工作区某个文件的内容，想直接丢弃工作区的修改时，用命令 git checkout -- file。
+1. 当你不但改乱了工作区某个文件的内容，还添加到了暂存区时，想丢弃修改，分两步，第一步用命令 git reset HEAD file，就回到了步骤1，第二步按步骤1操作。
+
+```
+// 恢复暂存区的指定文件到工作区
+$ git checkout [file]
+
+// 恢复某个commit的指定文件到暂存区和工作区
+$ git checkout [commit] [file]
+
+// 恢复暂存区的所有文件到工作区
+$ git checkout .
+
+// 重置暂存区的指定文件，与上一次commit保持一致，但工作区不变
+$ git reset [file]
+
+// 重置暂存区与工作区，与上一次commit保持一致
+$ git reset --hard
+
+// 重置当前分支的指针为指定commit，同时重置暂存区，但工作区不变
+$ git reset [commit]
+
+// 重置当前分支的HEAD为指定commit，同时重置暂存区和工作区，与指定commit一致
+$ git reset --hard [commit]
+
+// 重置当前HEAD为指定commit，但保持暂存区和工作区不变
+$ git reset --keep [commit]
+
+// 新建一个commit，用来撤销指定commit
+// 后者的所有变化都将被前者抵消，并且应用到当前分支
+$ git revert [commit]
+
+// 暂时将未提交的变化移除，稍后再移入
+$ git stash
+$ git stash pop
+```
+# Stash[](http://)
+假如你在 develop 分支开发时，release 分支有个 Bug 需要马上修复，此时，可以用stash 命令，把 develop 分支的代码储藏”起来，等 release 分支完工后继续回到 develop 分支工作。
+```
+// 存储所有未提交的修改
+$ git stash
+
+// 添加备注
+$ git stash save -a "message"
+
+// 查看所有的stash点
+$ git stash list
+stash@{0}: WIP on dev: e51b1fb feat: update .gitignore file
+stash@{1}: On dev: message
+
+// 恢复工作区最近的一次改动，但stash点并未删除
+$ git stash apply
+//多次stash后，恢复指定的stash
+$ git stash apply stash@{id}
+
+// 删除最近的一次改动的stash点
+$ git stash drop
+$ git stash drop stash@{id}
+
+// 恢复工作区最近的一次改动，并且删除stash点
+$ git stash pop
+$ git stash pop stash@{id}
+```
+# 变基 rebase
+变基操作在项目上用的不是很多，具体用法参照官方的例子学习即可。
+
+[Git - 变基](http://https://git-scm.com/book/zh/v2/Git-%E5%88%86%E6%94%AF-%E5%8F%98%E5%9F%BA)
+# Hooks
+适用于团队合作的时候，可以规范成员提交的信息。版本发布的时候，便于分析本次的release note。
+- 客户端钩子：本地仓库提交的时候，检查commit message是否合法。
+- 服务器端钩子：用于检查被推送的提交是否合法。
+
+[Git - Git 钩子](https://git-scm.com/book/zh/v2/%E8%87%AA%E5%AE%9A%E4%B9%89-Git-Git-%E9%92%A9%E5%AD%90)
+# 如何修改 commit message
+修改最近一次的commit message，使用 git commit --amend
+```
+$ git commit --amend -m [message]
+```
+修改历史的commit message，使用 git rebase
+```
+// 1. 列出所有的commit点,找前一个commit点，比如2cf55db1932bb7fca50f89389e09e3fb296c7483
+$ git log   
+    feat:this message is 中文
+commit 2cf55db1932bb7fca50f89389e09e3fb296c7483
+Author: drew <drew@drew.com>
+Date:   Mon Mar 20 10:39:15 2017 +0800
+
+// 2. rebase
+$ git rebase -i 2cf55db1932bb7fca50f89389e09e3fb296c7483
+
+pick 86e10b7 feat:this message is 中文
+pick 8deec08 feat:this message this right
+...
+
+// 3. 将[pick 86e10b7 feat:this message is 中文]
+改成[reword 86e10b7 feat:this message is chinese]
+
+// 4. wq 保存退出，如果不成功，继续修改一次
+
+// 5. 将修改推到仓库
+$ git push
+```
+# Fork
+适用于团队合作的时候，多个人对同一个仓库区（Repository）进行操作。
+1. 选择上游仓库，点击fork，将上游仓库fork到自己的仓库。
+2. clone到本地文件夹，即到本地库。
+3. 本地修改，push到自己的仓库。
+4. 提出pull request（merge request），在你的远程库中点击create pull request（merge request），等待别人review你的代码后merge入上游仓库。
+5. 如果被拒绝，拒绝原因是有冲突，就先把上游仓库的代码同步到本地，自己解决完冲突后重新提出pull request（merge request）。
+![](http://oxy6ml8al.bkt.clouddn.com/git-fork.jpg)
+
+# Submodule
+- 适用于多个Git项目嵌套互相合作。
+- 多个子系统（模块）都能及时更新到最新的公共资源。
+
+```
+// 添加一个嵌套目录
+$ git submodule add http://host:port/project.git [ditionatyName]
+```
+在项目的主目录会生成.gitmodules文件
+```
+[submodule "ditionatyName"]
+	path = ditionatyName
+	url = http://host:port/project.git
+    branch = develop
+```
+
+其它命令
+```
+// 拉取嵌套项目
+$ git clone http://host:port/project.git --recursive
+
+// 更新所有子目录
+$ git submodule update --init
+// 或者
+$ git submodule foreach git pull origin master
+
+// 删除子目录
+$ git rm --cached [ditionatyName]
+```
+# 参考
+[Git 命令详解及常用命令整理](https://yq.aliyun.com/ziliao/88995)
+
+[Git - Book](https://git-scm.com/book/zh/v2)
+
+[Git教程](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000)
+
+[Git Submodule使用完整教程](http://www.kafeitu.me/git/2012/03/27/git-submodule.html)
