feat:add rabbitmq.md

--- a/_posts/2017-10-12-RabbitMQ消息队列.md
+++ b/_posts/2017-10-12-RabbitMQ消息队列.md
@@ -300,7 +300,7 @@ mobileNos = 13811111111,13822222222,smsCode = 8888
 
 这是一个简单的使用 Spring boot + RabbitMq 进行消息收发的例子，基本上能够满足项目上一部分跨服务调用和异步调用的需求。
 
-# 下面再来看一下 SpringMVC + RabbitMq如何实现消息队列
+# SpringMVC + RabbitMq 实现消息队列
 
 其实 SpringMVC 与 Spring boot 最大的区别就是配置文件，SpringMVC 通过配置文件实现RabbitMq队列的声明。
 
