--- a/_posts/2017-10-14-Git笔记.md
+++ b/_posts/2017-10-14-Git笔记.md
@@ -3,7 +3,7 @@ layout:     post
 title:      Git 笔记
 subtitle:   整理一些自己工作上和网上看到的关于Git好的资料
 date:       2017-10-14
-author:     uncledrewzhu
+author:     uncledrew
 header-img: img/post-bg-re-vs-ng2.jpg
 catalog: true
 tags:
