--- a/_posts/2017-10-12-RabbitMQ消息队列.md
+++ b/_posts/2017-10-12-RabbitMQ消息队列.md
@@ -3,7 +3,7 @@ layout:     post
 title:      RabbitMQ 实现消息队列的收发
 subtitle:   基于 Spring boot 框架集成 RabbitMQ 消息队列
 date:       2017-10-12
-author:     uncledrewzhu
+author:     uncledrew
 header-img: img/post-bg-re-vs-ng2.jpg
 catalog: true
 tags:
