feat:update event.md

--- a/_posts/2017-10-19-领域事件驱动和监听.md
+++ b/_posts/2017-10-19-领域事件驱动和监听.md
@@ -32,6 +32,157 @@ tags:
 
 ### 基于 Spring boot 框架 集成 ApplicationEvent 实现事件驱动
 
+事件源发布事件，一个事件可以被多个监听器同时监听。监听器分为有序和无序两种。
+
+![](http://oxy6ml8al.bkt.clouddn.com/event-work-flow.png)
+
+实现代码：
+
+#### 定义登录bean
+```
+private String name;
+private String password;
+```
+
+#### 定义登录事件
+```
+public class LoginEvent extends ApplicationEvent {
+
+    public LoginEvent(LoginBean loginBean) {
+        super(loginBean);
+    }
+}
+```
+
+#### 定义一个无序监听器
+```
+@Service
+public class AfterLoginListenerNoOrder {
+
+    @EventListener
+    public void onLoginEvent(LoginEvent loginEvent) {
+        LoginBean loginBean = (LoginBean) loginEvent.getSource();
+        System.out.println("无序监听器，用户名 " + loginBean.getName());
+    }
+
+}
+```
+
+#### 定义三个有序监听器
+```
+@Service
+public class AfterLoginListener1 implements SmartApplicationListener {
+
+    @Override
+    public boolean supportsEventType(final Class<? extends ApplicationEvent> eventType) {
+        return eventType == LoginEvent.class;//定义监听的事件类型
+    }
+
+    @Override
+    public boolean supportsSourceType(final Class<?> sourceType) {
+        return sourceType == LoginBean.class;//定义监听的事件参数
+    }
+
+    @Override
+    public void onApplicationEvent(ApplicationEvent applicationEvent) {
+        LoginBean loginBean = (LoginBean) applicationEvent.getSource();
+        System.out.println("有序监听器1，用户名 " + loginBean.getName());
+    }
+
+    @Override
+    public int getOrder() {
+        return 1;//排序号，越小越先执行
+    }
+}
+
+
+@Service
+public class AfterLoginListener2 implements SmartApplicationListener {
+
+    ......
+
+    @Override
+    public void onApplicationEvent(ApplicationEvent applicationEvent) {
+        LoginBean loginBean = (LoginBean) applicationEvent.getSource();
+        System.out.println("有序监听器2，用户名 " + loginBean.getName());
+    }
+
+    @Override
+    public int getOrder() {
+        return 2;
+    }
+}
+
+
+@Service
+public class AfterLoginListener3 implements SmartApplicationListener {
+
+    ......
+
+    @Override
+    public void onApplicationEvent(ApplicationEvent applicationEvent) {
+        LoginBean loginBean = (LoginBean) applicationEvent.getSource();
+        System.out.println("有序监听器3，用户名 " + loginBean.getName());
+    }
+
+    @Override
+    public int getOrder() {
+        return 3;
+    }
+}
+```
+
+#### 定义登录服务，在服务中发布事件
+```
+@Service
+public class LoginService {
+
+    @Autowired
+    private ApplicationEventPublisher applicationEventPublisher;
+
+    public void login(String name, String password) {
+        System.out.println("用户名：" + name + ",密码：" + password + " 验证中！");
+        try {
+            applicationEventPublisher.publishEvent(new LoginEvent(new LoginBean(name, password)));
+        } catch (Exception e) {
+            System.out.println("监听器异常:" + e.getMessage());
+        }
+        System.out.println("用户名：" + name + ",密码：" + password + " 验证结束！");
+    }
+}
+```
+
+#### 定义Spring boot项目入口
+```
+@SpringBootApplication
+public class Application implements CommandLineRunner {
+
+    @Autowired
+    LoginService service;
+
+    @Override
+    public void run(String... args) throws Exception {
+        service.login("lfzhu", "123456");
+    }
+
+    public static void main(String[] args) throws Exception {
+        SpringApplication.run(Application.class, args);
+        System.exit(0);
+    }
+}
+```
+
+#### 运行结果
+```
+用户名：lfzhu,密码：123456 验证中！
+无序监听器，用户名 lfzhu
+有序监听器1，用户名 lfzhu
+有序监听器2，用户名 lfzhu
+有序监听器3，用户名 lfzhu
+用户名：lfzhu,密码：123456 验证结束！
+```
+
+
 
 ### 基于 Spring 的注解纯手工搭建一套事件工厂和事件监听框架
 
