feat:update event.md

--- a/_posts/2017-10-19-领域事件驱动和监听.md
+++ b/_posts/2017-10-19-领域事件驱动和监听.md
@@ -8,6 +8,7 @@ header-img: img/post-bg-re-vs-ng2.jpg
 catalog: true
 tags:
     - Spring boot
+    - 设计模式
     - Event
     - Publisher
     - Listener
@@ -30,15 +31,15 @@ tags:
 
 # 事件驱动的实现方式
 
-### 基于 Spring boot 框架 集成 ApplicationEvent 实现事件驱动
+## 基于 Spring boot 框架集成 ApplicationEvent 实现事件驱动
 
 事件源发布事件，一个事件可以被多个监听器同时监听。监听器分为有序和无序两种。
 
 ![](http://oxy6ml8al.bkt.clouddn.com/event-work-flow.png)
 
-实现代码：
+###实现代码：
 
-#### 定义登录bean
+#### 定义登录实体
 ```
 private String name;
 private String password;
@@ -152,7 +153,7 @@ public class LoginService {
 }
 ```
 
-#### 定义Spring boot项目入口
+#### 定义 Spring boot 项目入口
 ```
 @SpringBootApplication
 public class Application implements CommandLineRunner {
@@ -183,7 +184,269 @@ public class Application implements CommandLineRunner {
 ```
 
 
+## 基于 Spring 注解手工搭建一套事件发布和监听的框架
+- 应用启动的时候，将所有的事件服务注册进来。将所有的监听器服务以Map的形式存储到事件中心池中。
 
-### 基于 Spring 的注解纯手工搭建一套事件工厂和事件监听框架
+- 当A领域逻辑完成后，通过向事件中心传递一个 EventKey，触发事件驱动。事件中心根据 EventKey 寻找到所有的监听器，并执行订阅逻辑。
+
+- 事件中心触发事件驱动时，支持事件回调。
+
+![](http://oxy6ml8al.bkt.clouddn.com/event-work-flow-custom.png)
+
+###实现代码：
+
+#### 定义事件参数抽象类
+```
+public abstract class BaseEventParameter {
+}
+```
+
+#### 定义无回调事件监听器接口类
+使用泛型定义方法的传参为 BaseEventParameter 类型
+
+```
+public interface EventListener<T extends BaseEventParameter> {
+
+    void onEvent(T parameter);
+}
+```
+
+#### 定义回调事件监听器接口类
+使用泛型定义方法的传参和返回值为 BaseEventParameter 类型
+
+```
+public interface EventListenerWithCallBack<T extends BaseEventParameter, S extends
+    BaseEventParameter> {
+
+    S onEvent(T parameter);
+}
+```
+
+#### 定义事件回调接口
+使用泛型接收 BaseEventParameter 类型的参数
+
+```
+public interface EventCallBack<T extends BaseEventParameter> extends Consumer<T> {
+}
+```
+
+#### 定义事件中心池接口类
+使用泛型，定义两个接口，不带回调和带回调
+
+```
+public interface EventCenter {
+
+    <T extends BaseEventParameter> void triggerEvent(String eventKey, T parameter);
+
+    <T extends BaseEventParameter, S extends BaseEventParameter> void triggerEvent(String eventKey,
+        T parameter, EventCallBack<S> callBack);
+}
+```
+
+#### 定义事件中心池抽象类实现事件中心池接口
+
+- 定义两个Map，分别存放不带回调和带回调的监听器。
+
+- 实现 triggerEvent 方法，通过 eventKey 获取 Map 中对应的监听器，执行监听器的 onEvent 方法。
 
 
+```
+public abstract class AbstractEventCenter implements EventCenter {
+
+    protected Map<String, List> eventListenerMap = new LinkedHashMap();
+    protected Map<String, List> eventListenerWithCallBackMap = new LinkedHashMap();
+
+    @Override
+    public <T extends BaseEventParameter> void triggerEvent(String eventKey, T parameter) {
+        List<EventListener<T>> eventListeners = eventListenerMap.get(eventKey);
+        Optional.ofNullable(eventListeners).ifPresent(el -> {
+            el.forEach(listener -> {
+                try {
+                    listener.onEvent(parameter);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+            });
+        });
+    }
+
+    @Override
+    public <T extends BaseEventParameter, S extends BaseEventParameter> void triggerEvent(
+        String eventKey, T parameter, EventCallBack<S> callBack) {
+        List<EventListenerWithCallBack<T, S>> eventListeners =
+            eventListenerWithCallBackMap.get(eventKey);
+        Optional.ofNullable(eventListeners).ifPresent(el -> {
+            el.forEach(listener -> {
+                try {
+                    S result = listener.onEvent(parameter);
+                    callBack.accept(result);
+                } catch (Exception ex) {
+                    ex.printStackTrace();
+                }
+            });
+        });
+    }
+}
+```
+
+#### 定义事件中心实现类，继承事件中心池抽象类
+- 通过 `@Service` 声明实现类
+
+- 通过 `@Autowired` 和 `@Qualifier` 自动注入对应的监听器(有回调和无回调)
+
+- 通过 `@PostConstruct` 初始化实现类，并且将监听器存到父类的map对象利
+
+```
+@Service
+public class EventCenterImpl extends AbstractEventCenter {
+
+    @Autowired(required = false)
+    @Qualifier("case1")
+    private List<EventListener<Case1EventParameter>> case1Listeners;
+
+    @Autowired(required = false)
+    @Qualifier("case2")
+    private List<EventListener<Case2EventParameter>> case2Listeners;
+
+
+    @Autowired(required = false)
+    @Qualifier("case1")
+    private List<EventListenerWithCallBack<Case1EventParameter, Case1EventParameter>>
+        case1ListenersWithCallBack;
+
+    @PostConstruct
+    public void init() {
+        eventListenerMap.put("case1", case1Listeners);
+        eventListenerMap.put("case2", case2Listeners);
+        eventListenerWithCallBackMap.put("case1", case1ListenersWithCallBack);
+    }
+}
+```
+
+#### 定义 `Qualifier` 为 `case1` 的 EventParameter
+```
+private Long userId;
+```
+
+#### 定义 `Qualifier` 为 `case1` 的无回调监听器
+```
+@Qualifier("case1")
+@Component
+public class Case1EventListener implements EventListener<Case1EventParameter> {
+
+    @Override
+    public void onEvent(Case1EventParameter parameter) {
+        System.out.println("Case1EventListener onEvent result: " + parameter.getUserId());
+    }
+}
+```
+
+```
+@Qualifier("case1")
+@Component
+public class Case1EventListener2 implements EventListener<Case1EventParameter> {
+
+    @Override
+    public void onEvent(Case1EventParameter parameter) {
+        System.out.println("Case1EventListener2 onEvent result: " + parameter.getUserId());
+    }
+}
+```
+
+#### 定义 `Qualifier` 为 `case1` 的有回调监听器
+```
+@Qualifier("case1")
+@Component
+public class Case1EventListenerWithCallBack
+    implements EventListenerWithCallBack<Case1EventParameter, Case1EventParameter> {
+
+    @Override
+    public Case1EventParameter onEvent(Case1EventParameter parameter) {
+        System.out.println("Case1EventListenerWithCallBack onEvent result: " + parameter.getUserId());
+        parameter.setUserId(10L);
+        return parameter;
+    }
+}
+```
+
+#### 定义 `Qualifier` 为 `case1` 的事件回调类
+```
+@Component
+@Qualifier("Case1EventCallBack")
+public class Case1EventCallBack implements EventCallBack<Case1EventParameter> {
+
+    @Override
+    public void accept(Case1EventParameter parameter) {
+        System.out.println("Case1EventCallBack accept result: " + parameter.getUserId());
+    }
+}
+```
+
+#### 定义 `Qualifier` 为 `case2` 的 EventParameter
+```
+private Long deptId;
+```
+
+#### 定义 `Qualifier` 为 `case2` 的无回调监听器
+```
+@Qualifier("case2")
+@Component
+public class Case2EventListener implements EventListener<Case2EventParameter> {
+
+    @Override
+    public void onEvent(Case2EventParameter parameter) {
+        System.out.println("Case2EventListener onEvent result: " + parameter.getDeptId());
+    }
+}
+```
+
+#### 定义 Spring boot 项目入口
+```
+@SpringBootApplication
+public class Application implements CommandLineRunner {
+
+    @Autowired
+    private EventCenter eventCenter;
+    @Autowired
+    @Qualifier("Case1EventCallBack")
+    private EventCallBack callBack;
+
+    @Override
+    public void run(String... args) throws Exception {
+        Case1EventParameter parameter = new Case1EventParameter();
+        parameter.setUserId(1L);
+        eventCenter.triggerEvent("case1", parameter);
+        eventCenter.triggerEvent("case1", parameter, callBack);
+
+        Case2EventParameter parameter2 = new Case2EventParameter();
+        parameter2.setDeptId(2L);
+        eventCenter.triggerEvent("case2", parameter2);
+    }
+
+    public static void main(String[] args) throws Exception {
+        SpringApplication.run(Application.class, args);
+        System.exit(0);
+    }
+}
+```
+
+
+#### 运行结果
+```
+Case1EventListener2 onEvent result: 1
+Case1EventListener onEvent result: 1
+Case1EventListenerWithCallBack onEvent result: 1
+Case1EventCallBack accept result: 10
+Case2EventListener onEvent result: 2
+```
+
+# 总结
+
+不管是基于 Spring boot 框架集成 ApplicationEvent 实现事件驱动，还是基于 Spring 注解手工搭建一套事件发布和监听的框架，原理都是一样的。
+
+我的理解应该是与发布订阅模式相仿，最大的好处是能减少领域之间的耦合性。
+
+# 参考
+[浅析 Spring 中的事件驱动机制](http://www.importnew.com/26782.html)
+
+[快速搭建一个 Spring boot 项目](https://www.tianmaying.com/tutorial/spring-boot-overview)
