--- a/_posts/2017-10-19-领域事件驱动和监听.md
+++ b/_posts/2017-10-19-领域事件驱动和监听.md
@@ -185,6 +185,10 @@ public class Application implements CommandLineRunner {
 
 
 ## 基于 Spring 注解手工搭建一套事件发布和监听的框架
+该实现方法的过程来源于项目上
+
+实现原理
+
 - 应用启动的时候，将所有的事件服务注册进来。将所有的监听器服务以Map的形式存储到事件中心池中。
 
 - 当A领域逻辑完成后，通过向事件中心传递一个 EventKey，触发事件驱动。事件中心根据 EventKey 寻找到所有的监听器，并执行订阅逻辑。
@@ -294,7 +298,7 @@ public abstract class AbstractEventCenter implements EventCenter {
 
 - 通过 `@Autowired` 和 `@Qualifier` 自动注入对应的监听器(有回调和无回调)
 
-- 通过 `@PostConstruct` 初始化实现类，并且将监听器存到父类的map对象利
+- 通过 `@PostConstruct` 初始化实现类，并且将监听器存到父类的map对象里
 
 ```
 @Service
@@ -442,9 +446,11 @@ Case2EventListener onEvent result: 2
 
 # 总结
 
-不管是基于 Spring boot 框架集成 ApplicationEvent 实现事件驱动，还是基于 Spring 注解手工搭建一套事件发布和监听的框架，原理都是一样的。
+- 不管是基于 Spring boot 框架集成 ApplicationEvent 实现事件驱动，还是基于 Spring 注解手工搭建一套事件发布和监听的框架，原理都是一样的。
 
-我的理解应该是与发布订阅模式相仿，最大的好处是能减少领域之间的耦合性。
+- 我的理解应该是与发布订阅模式相仿，最大的好处是能减少领域之间的耦合性。
+
+- 符合领域驱动设计(DDD)的理念。
 
 # 参考
 [浅析 Spring 中的事件驱动机制](http://www.importnew.com/26782.html)
