feat:update  Annotation.md

--- a/_posts/2017-10-23-Spring注解.md
+++ b/_posts/2017-10-23-Spring注解.md
@@ -27,7 +27,7 @@ tags:
 - 降低维护成本：注解是写在class文件中的
 - 提高开发效率
 
-# 写了一个 Spring Annotation 简单的例子
+# 写一个 Spring Annotation 简单的例子
 
 #### 创建一个枚举(enum)类
 用于表示注解类配置参数的可选值
@@ -96,10 +96,10 @@ public @interface Name {
 
 4. @Inherited
     - 是一个标记注解，阐述了某个被标注的类型是被继承的
-    - 如果一个使用了 @Inherited 修饰的 annotation 类型被用于一个 class，则这个 annotation 将被用于该 class 的子类。
-    - 类并不从它所实现的接口继承 annotation，方法并不从它所重载的方法继承 annotation。
+    - 如果一个使用了 @Inherited 修饰的 annotation 类型被用于一个 class，则这个 annotation 将被用于该 class 的子类
+    - 类并不从它所实现的接口继承 annotation，方法并不从它所重载的方法继承 annotation
 
-#### 创建一个测试类，用上自定义的注解
+#### 创建一个类，使用自定义的注解
 
 ```
 @Description(DescriptionValue.PROCESS)
@@ -117,3 +117,49 @@ public class AnnotationDemo {
     }
 }
 ```
+
+#### 创建 main 文件，提取注解
+
+```
+public class Main {
+
+    public static void main(String[] args) throws Exception {
+        Class clazz = Class.forName("com.lfzhu.quickstart.annotation.AnnotationDemo");
+        if (clazz.isAnnotationPresent(Description.class)) {
+            Description description = (Description) clazz.getAnnotation(Description.class);
+            System.out.println("description value = [" + description.value().desc() + "]");
+            System.out.println("////////////////////////////////");
+        }
+
+        Method[] methods = clazz.getMethods();
+        Arrays.asList(methods).stream()
+            .filter(method -> method.isAnnotationPresent(Name.class))
+            .forEach(method -> {
+                if (method.isAnnotationPresent(Name.class)) {
+                    Name name = (Name) method.getAnnotation(Name.class);
+                    System.out.println("name col1 = [" + name.col1() + "]");
+                    System.out.println("name col2 = [" + name.col2() + "]");
+                    System.out.println("////////////////////////////////");
+                }
+            });
+    }
+}
+```
+
+#### 运行结果
+
+```
+description value = [执行]
+////////////////////////////////
+name col1 = [end]
+name col2 = [2]
+////////////////////////////////
+name col1 = [start]
+name col2 = [1]
+////////////////////////////////
+```
+
+
+# 总结
+
+
