feat:update  Annotation.md

--- a/_posts/2017-10-23-Spring注解.md
+++ b/_posts/2017-10-23-Spring注解.md
@@ -27,7 +27,8 @@ tags:
 - 降低维护成本：注解是写在class文件中的
 - 提高开发效率
 
-# 写一个 Spring Annotation 简单的例子
+# 测试案例
+关于 Spring Annotation 更详细的博客，可以搜到一堆，这里只做最简单的测试案例，以作备忘。
 
 #### 创建一个枚举(enum)类
 用于表示注解类配置参数的可选值
