feat:update secret.md

--- a/_posts/2017-10-25-Web项目安全机制和权限管理.md
+++ b/_posts/2017-10-25-Web项目安全机制和权限管理.md
@@ -85,7 +85,7 @@ tags:
 - 元数据定义平台定义不同应用的菜单JSON文件
 - 部署SSO应用的时候，自动将菜单JSON文件一起打包到容器中
 - `SSO`应用提供获取菜单的接口 `/Api/SystemMenu/getMenus/{appName}`，根据 `appName` 区分具体想获取的是哪个应用的菜单，值为空时默认获取所有应用的菜单
-- 根据当前用户拥有的菜单权限进行过滤，返回实际拥有的菜单
+- 根据当前用户配置的菜单权限进行过滤，返回实际拥有的菜单
 
 #### 如何进行 URL 合法性验证
 这一步操作是在每个后端应用的拦截器中完成的。
@@ -94,3 +94,16 @@ tags:
 - 根据菜单和访问路径的 Mapping，检查本次请求的 Url 是否匹配当前菜单，如果不匹配，提示无权访问。
 
 #### 如何对返回数据进行权限筛选
+通过框架的封装，后端应用返回数据分两种形式：
+1. 详情页面 `DetailResponseBean`
+2. 列表(或者可编辑列表)页面 `ListRenderResponseBean`
+
+主要针对这两种数据的返回格式，根据当前主菜单时编辑权限还是只读权限进行筛选：
+- 筛选按钮
+- 筛选字段
+
+筛选的优先级：
+- 特殊权限(自定义权限) > 通用权限
+- 编辑 > 只读 
+- 可见 > 不可见
+- 必须 > 非必须
