feat:update secret.md

--- a/_posts/2017-10-25-Web项目安全机制和权限管理.md
+++ b/_posts/2017-10-25-Web项目安全机制和权限管理.md
@@ -83,7 +83,7 @@ tags:
 
 #### 如何获取菜单
 - 元数据定义平台定义不同应用的菜单JSON文件
-- 部署SSO应用的时候，自动将菜单JSON文件一起打包到容器中
+- 部署`SSO`应用的时候，自动将菜单JSON文件一起打包到容器中
 - `SSO`应用提供获取菜单的接口 `/Api/SystemMenu/getMenus/{appName}`，根据 `appName` 区分具体想获取的是哪个应用的菜单，值为空时默认获取所有应用的菜单
 - 根据当前用户配置的菜单权限进行过滤，返回实际拥有的菜单
 
