feat:add microservice.md

--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -34,7 +34,30 @@ tags:
 #### Thrift
 Thrift 是 Facebook 公布的一款可扩展的跨语言服务开发的软件框架。
 
+下面是引用网上的一段解释：
+> 什么是RPC框架?
+
+> RPC全称为Remote Procedure Call,意为远程过程调用.
+
+> 假设有两台服务器A,B.A服务器上部署着一个应用a,B服务器上部署着一个应用b,现在a希望能够调用b应用的某个函数(方法),
+但是二者不在同一个进程内,不能直接调用,就需要通过网络传输,在AB服务器之间建一条网络传输通道,a把参数传过去,
+b接收到参数调用自己的方法,得到结果,再通过网络传回给a,简单讲就是A通过网络来调用B的过程.这个过程要涉及的东西很多,
+比如多线程,Socket,序列化反序列化,网络I/O,很复杂,于是牛掰的程序员把这些封装起来做成一套框架,供大家使用,就是RPC框架.
+
+> thrift的跨语言特型
+
+> thrift通过一个中间语言IDL(接口定义语言)来定义RPC的数据类型和接口,这些内容写在以.thrift结尾的文件中,
+然后通过特殊的编译器来生成不同语言的代码,以满足不同需要的开发者,比如java开发者,就可以生成java代码,
+c++开发者可以生成c++代码,生成的代码中不但包含目标语言的接口定义,方法,数据类型,还包含有RPC协议层和传输层的实现代码.
 
 #### Zookeeper
 使用 Zookeeper 进行服务注册与服务发现
 ![](http://oxy6ml8al.bkt.clouddn.com/microservice-zookeeper.jpg)
+
+
+
+# 参考
+[Thrift入门初探](http://www.cnblogs.com/fingerboy/p/6424248.html)
+[Writing a .thrift file](http://thrift-tutorial.readthedocs.io/en/latest/thrift-file.html)
+[基于Zookeeper的服务注册与发现 ](https://tech.imdada.cn/2015/12/03/service-registry-and-discovery-with-zk/)
+[](http://www.cnblogs.com/skyblog/p/5535418.html)
