feat:add microservice.md

--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -51,12 +51,26 @@ b接收到参数调用自己的方法,得到结果,再通过网络传回给a,简
 c++开发者可以生成c++代码,生成的代码中不但包含目标语言的接口定义,方法,数据类型,还包含有RPC协议层和传输层的实现代码.
 
 #### Zookeeper
-使用 Zookeeper 进行服务注册与服务发现
+ZooKeeper 是一个分布式的，开放源码的分布式应用程序协调服务。
+
+ZooKeeper 封装好复杂易出错的关键服务，将简单易用的接口和性能高效、功能稳定的系统提供给用户。
+
+ZooKeeper 主要提供的功能：
+- 配置维护
+- 域名服务
+- 分布式同步
+- 组服务等
+
+这里，我们是通过 Zookeeper 进行服务注册、服务发现和服务治理。
+
+如图：
 ![](http://oxy6ml8al.bkt.clouddn.com/microservice-zookeeper.jpg)
 
-
+本地如果想要搭建一个 Zookeeper 服务，可以使用 Docker 快速启动。我用的是 [wurstmeister/zookeeper](https://hub.docker.com/r/wurstmeister/zookeeper/) 这个镜像。
 
 # 参考
+[Building Apache Thrift on CentOS](https://thrift.apache.org/docs/install/centos)
+
 [Thrift入门初探](http://www.cnblogs.com/fingerboy/p/6424248.html)
 
 [Writing a .thrift file](http://thrift-tutorial.readthedocs.io/en/latest/thrift-file.html)
