feat:update microservice.md

--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -70,11 +70,14 @@ ZooKeeper 主要提供的功能：
 
 # 建立微服务
 
+#### 使用 Thrift 定义接口协议
 
 
 
 # 参考
 [Building Apache Thrift on CentOS](https://thrift.apache.org/docs/install/centos)
+
+[Building Apache Thrift on CentOS (简书)](http://www.jianshu.com/p/08c5d24656ae)
 
 [Thrift入门初探](http://www.cnblogs.com/fingerboy/p/6424248.html)
 
