--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -68,9 +68,52 @@ ZooKeeper 主要提供的功能：
 
 本地如果想要搭建一个 Zookeeper 服务，可以使用 Docker 快速启动。我用的是 [wurstmeister/zookeeper](https://hub.docker.com/r/wurstmeister/zookeeper/) 这个镜像。
 
-# 建立微服务
+# 微服务案例[后端应用在`filter`中通过`kafka`生产`http`报文日志，用于行为分析]
 
 #### 使用 Thrift 定义接口协议
+1. 定义接口协议文件 `KafkaProducerService.thrift`
+
+ ```
+ namespace java kafka.producer.service
+ 
+ struct MessageSendBean {
+   1: string topic
+   2: string message
+ }
+  
+ service KafkaProducerService {
+   void sendMessageToKafka(1:MessageSendBean messageSendBean)
+ }
+ ```
+ 
+2. 终端进入文件所在目录,执行命令:
+ 
+ ```
+ thrift -r -gen java KafkaProducerService.thrift
+```
+
+会生成一个 gen-java 的目录，里面有 `MessageSendBean.java` 和 `KafkaProducerService.java` 两个文件。
+包含接口定义 KafkaProducerService.Iface，以及服务调用的底层通信细节。
+包括客户端的调用逻辑 KafkaProducerService.Client 以及服务端的处理逻辑 KafkaProducerService.Processor。
+
+3. 创建一个声明所有 thrift 接口的 maven 项目，取名`thrift-interface`，在 pom.xml 文件中添加依赖
+```
+<dependency>
+    <groupId>org.apache.thrift</groupId>
+    <artifactId>libthrift</artifactId>
+    <version>0.9.3</version>
+</dependency>
+```
+并且将 gen-java 的目录下的文件放到项目中。
+
+4. 打包，上传到 本地私服 nexus 中。
+```
+    $ maven package
+    $ mvn deploy:deploy-file -DgroupId=com.lfzhu -DartifactId=thrift-interface -Dversion=0.0.1 -Dpackaging=jar -Dfile=target/thrift-interface-0.0.1.jar -DpomFile=pom.xml -Durl=http://host:port/repository/maven-releases -DrepositoryId=nexus
+```
+
+#### 定义 Thrift 和 Zookeeper 服务工厂
+
 
 
 
@@ -86,3 +129,5 @@ ZooKeeper 主要提供的功能：
 [基于Zookeeper的服务注册与发现 ](https://tech.imdada.cn/2015/12/03/service-registry-and-discovery-with-zk/)
 
 [](http://www.cnblogs.com/skyblog/p/5535418.html)
+
+[Apache Helix简介](http://blog.csdn.net/oopsoom/article/details/47416575)
