feat:update microservice.md

--- a/_posts/2017-10-27-微服务.md
+++ b/_posts/2017-10-27-微服务.md
@@ -108,15 +108,252 @@ ZooKeeper 主要提供的功能：
 
 并且将 gen-java 的目录下的文件放到项目中。
 
-4. 打包，上传到 本地私服 nexus 中。
+4. 打包，上传到本地私服 nexus 中。
 ```
     $ maven package
     $ mvn deploy:deploy-file -DgroupId=com.lfzhu -DartifactId=thrift-interface -Dversion=0.0.1 -Dpackaging=jar -Dfile=target/thrift-interface-0.0.1.jar -DpomFile=pom.xml -Durl=http://host:port/repository/maven-releases -DrepositoryId=nexus
 ```
 
 #### 定义 Thrift 和 Zookeeper 服务工厂
+1. 创建 maven 项目，取名`thrift-zookeeper-factory`，在 pom.xml 文件中添加依赖
+   
+```
+<!-- thrift -->
+<dependency>
+    <groupId>org.apache.thrift</groupId>
+    <artifactId>libthrift</artifactId>
+    <version>0.9.3</version>
+</dependency>
 
+<!-- zookeeper -->
+<dependency>
+    <groupId>org.apache.zookeeper</groupId>
+    <artifactId>zookeeper</artifactId>
+    <version>3.4.6</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.helix</groupId>
+    <artifactId>helix-core</artifactId>
+    <version>0.6.4</version>
+</dependency>
+```
 
+2. 定义 Thrift 客户端管理器
+
+```
+public class MyTServiceClient extends TServiceClient {
+
+    public MyTServiceClient(TProtocol prot) {
+        super(prot);
+    }
+}
+```
+
+3. 定义 Thrift 服务端管理器
+
+```
+public class ThriftServerManager {
+
+    ExecutorService executor = Executors.newSingleThreadExecutor();
+
+    public static Map<String, TServiceClient> serviceMap = new HashMap<String, TServiceClient>();
+
+    private int servicePort;
+
+    private TProcessor iface;
+
+    public ThriftServerManager(TProcessor iface, int servicePort) {
+        this.iface = iface;
+        this.servicePort = servicePort;
+    }
+
+    public void publishThriftServiceInThreadPool() {
+        executor.execute(new Runnable() {
+            @Override
+            public void run() {
+                try {
+                    publishThriftService(iface).serve();
+                } catch (TTransportException e) {
+                    throw new RuntimeException("Init TTransport error! port is " + servicePort);
+                }
+            }
+        });
+    }
+
+    private TServer publishThriftService(TProcessor iface) throws TTransportException {
+        TServerTransport transport = new TServerSocket(servicePort);
+        TServer server =
+            new TThreadPoolServer(new TThreadPoolServer.Args(transport).processor(iface));
+        return server;
+    }
+}
+```
+4. 定义 Zookeeper 客户端管理器
+
+```
+public class ZooKeeperClientManager {
+
+    ExecutorService executor = Executors.newSingleThreadExecutor();
+
+    public static Map<String, TServiceClient> serviceMap = new HashMap<String, TServiceClient>();
+
+    private int servicePort;
+
+    private String serviceName;
+
+    private String zookeeperList;
+
+    public ZooKeeperClientManager(String serviceName, String zookeeperList, int servicePort) {
+        this.servicePort = servicePort;
+        this.serviceName = serviceName;
+        this.zookeeperList = zookeeperList;
+    }
+
+    public static TServiceClient getRandomService() {
+        if (serviceMap.size() < 1) {
+            System.out.println("无可供选择的服务！");
+            return null;
+        }
+        for (Map.Entry<String, TServiceClient> entry : serviceMap.entrySet()) {
+            System.out.println("可供选择服务:" + entry.getKey());
+        }
+        int rand = new Random().nextInt(serviceMap.size());
+        String[] mkeys = serviceMap.keySet().toArray(new String[serviceMap.size()]);
+        System.out.println("当前使用的服务:" + mkeys[rand]);
+        return serviceMap.get(mkeys[rand]);
+    }
+
+    public void startZooKeeperInThreadPool() {
+        executor.execute(new Runnable() {
+            @Override
+            public void run() {
+                startZooKeeper();
+            }
+        });
+    }
+
+    // 注册服务
+    private void startZooKeeper() {
+        List<String> currChilds = new ArrayList<String>();
+        String servicePath = "/" + serviceName;
+        ZkClient zkClient = new ZkClient(zookeeperList);
+        boolean serviceExists = zkClient.exists(servicePath);
+        if (serviceExists) {
+            currChilds = zkClient.getChildren(servicePath);
+        } else {
+            throw new RuntimeException("service not exist!");
+        }
+
+        for (String instanceName : currChilds) {
+            if (!serviceMap.containsKey(instanceName)) {
+                serviceMap.put(instanceName, createService(instanceName));
+            }
+        }
+        // 注册事件监听,动态监控服务增加/删除
+        zkClient.subscribeChildChanges(servicePath, new IZkChildListener() {
+            @Override
+            public void handleChildChange(String parentPath,
+                List<String> currentChilds) throws Exception {
+                for (String instanceName : currentChilds) {
+                    if (!serviceMap.containsKey(instanceName)) {
+                        serviceMap.put(instanceName, createService(instanceName));
+                        System.out.println(parentPath + "事件触发,增加服务实例" + instanceName);
+                    }
+                }
+                Map<String, TServiceClient> tempMap = new HashMap<String, TServiceClient>();
+                tempMap.putAll(serviceMap);
+                for (Map.Entry<String, TServiceClient> entry : tempMap.entrySet()) {
+                    if (!currentChilds.contains(entry.getKey())) {
+                        TServiceClient c = serviceMap.get(entry.getKey());
+                        try {
+                            c.getInputProtocol().getTransport().close();
+                            c.getOutputProtocol().getTransport().close();
+                        } catch (Exception e) {
+                            e.printStackTrace();
+                        }
+                        serviceMap.remove(entry.getKey());
+                        System.out.println(parentPath + "事件触发,移除服务实例" + entry.getKey());
+                    }
+                }
+            }
+        });
+    }
+
+    public TServiceClient createService(String serviceInstanceName) {
+        return new MyTServiceClient(getTProtocol(serviceInstanceName));
+    }
+
+    public TProtocol getTProtocol(String serviceInstanceName) {
+        String ip = serviceInstanceName.split("-")[1];
+        TSocket transport = new TSocket(ip, servicePort);
+
+        try {
+            transport.open();
+        } catch (TTransportException ex) {
+            throw new RuntimeException("Thrift socket can not open!" + ex.getMessage());
+        }
+        return new TBinaryProtocol(transport);
+    }
+}
+```
+5. 定义 Zookeeper 服务端管理器
+
+```
+public class ZooKeeperServerManager {
+
+    ExecutorService executor = Executors.newSingleThreadExecutor();
+
+    public static Map<String, TServiceClient> serviceMap = new HashMap<String, TServiceClient>();
+
+    private String serviceName;
+
+    private String zookeeperList;
+
+    public ZooKeeperServerManager(String serviceName, String zookeeperList) {
+        this.serviceName = serviceName;
+        this.zookeeperList = zookeeperList;
+    }
+
+    public void registThriftServiceToZookeeperInThreadPool() {
+        executor.execute(new Runnable() {
+            @Override
+            public void run() {
+                registThriftServiceToZookeeper();
+            }
+        });
+    }
+
+    // 注册服务
+    private ZkClient registThriftServiceToZookeeper() {
+        String servicePath = "/" + serviceName;
+        ZkClient zkClient = new ZkClient(zookeeperList);
+        boolean rootExists = zkClient.exists(servicePath);
+        if (!rootExists) {
+            zkClient.createPersistent(servicePath);
+        }
+        InetAddress addr = null;
+        try {
+            addr = InetAddress.getLocalHost();
+        } catch (UnknownHostException e) {
+            e.printStackTrace();
+        }
+        String ip = addr.getHostAddress().toString();
+        String serviceInstance = System.nanoTime() + "-" + ip;
+        // 注册当前服务
+        zkClient.createEphemeral(servicePath + "/" + serviceInstance);
+        System.out.println("提供的服务为：" + servicePath + "/" + serviceInstance);
+        return zkClient;
+    }
+
+}
+```
+
+6. 打包，上传到本地私服 nexus 中。
+```
+    $ maven package
+    $ mvn deploy:deploy-file -DgroupId=com.lfzhu -DartifactId=thrift-zookeeper-factory -Dversion=0.0.1 -Dpackaging=jar -Dfile=target/thrift-zookeeper-factory-0.0.1.jar -DpomFile=pom.xml -Durl=http://host:port/repository/maven-releases -DrepositoryId=nexus
+
+```
 
 
 # 参考
